--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "build-run": "tsc -outDir out && node ./out/index.js"
+    "build": "tsc -outDir out",
+    "server": "tsc -outDir out && nodemon ./out/index.js",
+    "commit": "git add . && git commit",
+    "push": "git push -u github master -u gitlab master"
   },
-  "author": "",
+  "author": "Emre Eren",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.7.36",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.10.0",
+    "mongoose-timestamp": "^0.6.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "@types/morgan": "^1.9.1",
     "@babel/preset-typescript": "^7.10.4",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.0"
   }
 }
